# copilot-discussion

./: .gitignore  README.md  announcement-haskell-3.0  core-language.md  questions.md  todo.md
DevGuide/: Core.tex  Interpreter.tex  SBV.tex
ICFP2012/: Makefile  paper.bib  paper.tex
ISSE12/: Makefile  Reviews  biblio.bib  conclusion.tex  copilot_tutorial.tex  flight-tests.tex  intro.tex  main.tex  mavlink.tex  mybib.bib  overview.tex  sampling.tex  watchmen.tex
ISoLA16/: FT.tex  Related.tex  codecorrect.tex  conclusion.tex  copilot.tex  intro.tex  noninterference.tex  observ.tex  opportunities.tex  paper.bib  paper.tex  predictive.tex  security.tex  spec.tex  steer.tex  trace.tex  verispec.tex
RSpring/rtr_copilot/: CMakeLists.txt  Makefile  README.md  plotPendulum.py  plotSolution.py  plotVectorField.py  rt_reachability.c  vector_field.c
RSpring/rtr_copilot/haskell_rtr/: Makefile  rtr.hs
RSpring/rtr_copilot/include/: constants.h  hyper_rect.h  interval.h  monitor.h  rt_face_lift.h  util.h
RSpring/rtr_copilot/inverted_pendulum_rtr_ompl/: Makefile  animate.py  inv_pen_sim.py  inverted_pendulum_model.cpp  pid_ctrl.cpp
RSpring/rtr_copilot/inverted_pendulum_rtr_ompl/include/: pid_ctrl.h
RSpring/rtr_copilot/linear_system/: linear.c  linear_control.c
RSpring/rtr_copilot/linear_system/include/: linear.h  linear_control.h
RSpring/rtr_copilot/nonlinear_pendulum_autogen/: nonlinear_pendulum_params.c
RSpring/rtr_copilot/nonlinear_pendulum_autogen/include/: nonlinear_pendulum_params.h
RSpring/rtr_copilot/pendulum_autogen/: pendulum_params.c
RSpring/rtr_copilot/pendulum_autogen/include/: pendulum_params.h  pendulum_vector_field.h
RSpring/rtr_copilot/src/: interval.c  rt_face_lift.c  util.c
RSpring/rtr_copilot/vanderpol_autogen/: vanderpol_params.c
RSpring/rtr_copilot/vanderpol_autogen/include/: vanderpol_params.h  vanderpol_vector_field.h
RV2015/: Background.tex  CaseStudy.tex  Related.tex  Structure.tex  Structure.tex~  conclusion.tex  copilot-intro.tex  copilot-intro.tex~  intro.tex  intro.tex~  paper.bib  paper.tex  paper.tex~  prover.tex
Tutorial/: Domain.tex  Interpret.tex  MajVoteExample.tex  RemovedTools.tex  introduction.tex
TutorialAndDevGuide/: copilot_tutorial.tex
WC-End2End/: CompCert.tex  conclusion.tex  copilot.tex  flightTest.tex  intro.tex  paper.bib  paper.tex  specverify.tex  verifiedmonitors.tex  wellclear.tex
cbackend-pres2018/: cbackend-pres2018.tex  toolchain.tex
co-kind-report/: IL.tex  biblio.bib  conclusion.tex  copilot-intro.tex  interface.tex  main.blg  (+9 more)
(+117 files in other folders)
